# gen_odr

./: .clang-format  CMakeLists.txt  README.md
include/: arc_curves.h  json_map.h  opendrive.h  test_data.h
src/: arc_curves.cpp  json_map.cpp  main.cpp  opendrive.cpp
